<resources
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
    tools:ignore="MissingTranslation">
    <string name="generic_ok">OK</string>
    <string name="generic_cancel">Cancel</string>
    <string name="generic_help">Help</string>
    <string name="generic_undo">Undo</string>
    <string name="generic_save">Save</string>
    <string name="generic_create">Create</string>
    <string name="generic_delete">Delete</string>
    <string name="generic_retry">Retry</string>
    <string name="generic_go">Go</string>
    <string name="generic_manage_card">Manage</string>
    <string name="generic_enable">Enable</string>
    <string name="generic_show_more">Show more</string>
    <string name="generic_no">No</string>
    <string name="generic_yes">Yes</string>
    <string name="generic_skip">Skip</string>
    <string name="generic_swipe_to_dismiss">Swipe to the side to remove this message</string>
    <string name="generic_runtime_permission_rejected">Permission rejected; You can manage permissions in the system settings</string>
    <string name="about_version">Version %s</string>
    <string name="about_contact_title">Support</string>
    <string name="about_contact_mail">
        https://timelimit.io/en/#support
        \nhttps://timelimit.io/en/configsuggestions/
    </string>
    <string name="about_full_version">Premium version</string>
    <string name="about_sal" translatable="false">Stay Awesome License</string>
    <string name="about_full_version_not_in_local_mode">
        The premium version is not available in the local mode.
        You can buy a stay awesome license.
    </string>
    <string name="about_full_version_expired">
        You did not buy the premium version or the premium version expired.
    </string>
    <string name="about_full_version_until">
        You have got the premium version until %s.
    </string>
    <string name="about_full_version_always">
        The server you are using does not limit the access to the features of the premium version.
    </string>
    <string name="about_full_version_tap_hint">
        Tap here to buy or extend the premium version.
    </string>
    <string name="about_sal_tap_hint">
        Tap here to buy a stay awesome license.
    </string>
    <string name="about_contained_software_title">contained Software</string>
    <string name="about_contained_software_text" translatable="false">
        Kotlin Standard Library
        (<a href="https://github.com/JetBrains/kotlin/blob/master/license/LICENSE.txt">Apache License, Version 2.0</a>)
        \nKotlin Coroutines
        (<a href="https://github.com/JetBrains/kotlin/blob/master/license/LICENSE.txt">Apache License, Version 2.0</a>)
        \nAndroid X
        (<a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>)
        \nAndroid Navigation Component
        (<a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>)
        \nAndroid Room
        (<a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>)
        \nAndroid X Paging Library
        (<a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>)
        \nAndroid Work Manager
        (<a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>)
        \n<a href="https://github.com/jaredrummler/AndroidDeviceNames">Android Device Names</a>
        (<a href="https://github.com/jaredrummler/AndroidDeviceNames/blob/master/LICENSE.txt">Apache License, Version 2.0</a>)
        \n<a href="https://github.com/JakeWharton/ThreeTenABP">Three Ten Android Backport</a>
        (<a href="https://github.com/JakeWharton/ThreeTenABP/blob/master/LICENSE.txt">Apache License, Version 2.0</a>)
        \n<a href="https://github.com/jeremyh/jBCrypt">JBcrypt</a>
        (<a href="https://github.com/jeremyh/jBCrypt/blob/master/LICENSE">ISC license</a>)
        \n<a href="https://github.com/KeepSafe/TapTargetView">TapTargetView</a>
        (<a href="https://github.com/KeepSafe/TapTargetView/blob/master/LICENSE">Apache License, Version 2.0</a>
        \n<a href="https://github.com/google/flexbox-layout">Flexbox Layout</a>
        (<a href="https://github.com/google/flexbox-layout/blob/master/LICENSE">Apache License, Version 2.0</a>)
        \nGoogle Play Billing Library (only in builds in the Play Store)
        (<a href="https://developer.android.com/google/play/billing/release-notes"> Android Software Development Kit License Agreement</a>)
        \n<a href="https://github.com/square/okhttp">OkHttp</a>
        (<a href="https://github.com/square/okhttp/blob/master/LICENSE.txt">Apache License, Version 2.0</a>)
        \n<a href="https://github.com/socketio/socket.io-client-java">Socket.io-Java-Client</a>
        (<a href="https://github.com/socketio/socket.io-client-java/blob/master/LICENSE">MIT License</a>)
        \n<a href="https://github.com/apache/commons-text">Apache Commons Text</a>
        (<a href="https://github.com/apache/commons-text/blob/master/LICENSE.txt">Apache License, Version 2.0</a>)
        \n<a href="https://github.com/signalapp/curve25519-java">curve25519-java</a>
        (<a href="https://github.com/signalapp/curve25519-java/blob/master/LICENSE">GNU General Public License v3.0</a>)
        \n<a href="https://github.com/zxing/zxing">ZXing</a>
        (<a href="https://github.com/zxing/zxing/blob/master/LICENSE">Apache License 2.0</a>)
    </string>
    <string name="about_diagnose_title">Error diagnose</string>
    <string name="about_diagnose_text">Tap here to access details which help diagnosing errors</string>
    <string name="about_developer_key_title">Developer PGP-Key fingerprint</string>
    <string name="about_developer_key_text" translatable="false">2E5C 672D E893 055D 04F5 B7BC 36B4 49FB 5364 BDC4</string>
    <string name="about_source_title">Source code</string>
    <string name="about_source_text" translatable="false">
        <a href="https://codeberg.org/timelimit/timelimit-android">https://codeberg.org/timelimit/timelimit-android</a>
    </string>
    <string name="add_device">Add device</string>
    <string name="add_device_info">
        Enter the code at the device which you would like to add.
    </string>
    <string name="add_device_success">The device %s was added</string>
    <string name="add_used_time_title">Add usage duration</string>
    <string name="add_used_time_title_with_category_title">Add usage duration for %s</string>
    <string name="add_used_time_description">This allows to add used time/ mark time as used
        in case it was used outside of TimeLimit, e.g. when you want to add telescreen usage
        to the used time
    </string>
    <string name="add_used_time_confirmation_toast">%1$s used time added for %2$s</string>
    <string name="add_user_title">Create user</string>
    <string name="add_user_hint_name">Name of the user</string>
    <string name="add_user_type_parent">Parent</string>
    <string name="add_user_type_child">Child</string>
    <string name="add_user_confirmation_done">User was created</string>
    <string name="add_user_child_password_info">If you chose a password for the child,
        then it can switch to its own user with its password.
        This feature is disabled if a child does not have a password.
    </string>
    <string name="add_user_authentication_required_text">
        Only parents may add users
    </string>
    <string name="add_user_authentication_required_btn">Authenticate</string>
    <string name="annoy_info">
        There was a manipulation of TimeLimit. Due to that, this device is locked for a moment.
    </string>
    <string name="authenticate_by_mail_text">
        To continue, you need an e-mail address to which you have got access
    </string>
    <string name="authenticate_by_mail_other_title">Sign in with a mail address</string>
    <string name="authenticate_by_mail_other_text">TimeLimit will send you a message with a code which you enter here to authenticate.</string>
    <string name="authenticate_by_mail_hint_mail">Mail address</string>
    <string name="authenticate_by_mail_hint_general">
        If you signed in earlier using your Google account, then just use the mail address which is assigned to your Google account.
    </string>
    <string name="blocked_time_areas">
        Blocked time areas
    </string>
    <string name="category_apps_title">assigned Apps</string>
    <string name="category_settings">Advanced Settings</string>
    <string name="category_time_limit_rules">time limit rules</string>
    <string name="day_of_week_monday">Monday</string>
    <string name="day_of_week_tuesday">Tuesday</string>
    <string name="day_of_week_wednesday">Wednesday</string>
    <string name="day_of_week_thursday">Thursday</string>
    <string name="day_of_week_friday">Friday</string>
    <string name="day_of_week_saturday">Saturday</string>
    <string name="day_of_week_sunday">Sunday</string>
    <string name="manage_device_manipulation_title">Manipulation</string>
    <string name="manage_device_manipulation_text">
        The following was manipulated:
    </string>
    <string name="manage_device_manipulation_device_admin_disabled">device admin disabled</string>
    <string name="manage_device_manipulation_device_admin_disable_attempt">disabling devcie admin was attempted</string>
    <string name="manage_device_manipulation_usage_stats_access">usage stats access</string>
    <string name="manage_device_manipulation_notification_access">notification access</string>
    <string name="manage_device_manipulation_app_version">older App version installed</string>
    <string name="manage_device_manipulation_reboot">device was rebooted</string>
    <string name="manage_device_manipulation_existed">there was a manipulation which was stopped again</string>
    <string name="manage_device_manipulation_btn_ignore">Confirm and hide warnings</string>
    <string name="primary_device_title">Current device</string>
    <string name="primary_device_description">
        The current device is the device on which limited Apps can be used
        if a child has got multiple devices.
        This prevents that a child uses the time limit multiple times
        if no synchronization between the devices is possible.
        There can only be one current device per child.
    </string>
    <string name="primary_device_status_local_mode">
        You are using the local mode.
        Due to that, there is no need to select a current device.
    </string>
    <string name="primary_device_status_no_device">There is no current device selected</string>
    <string name="primary_device_status_other_device">\"%s\" is the current device</string>
    <string name="primary_device_status_this_device">This device is the current device</string>
    <string name="primary_device_btn_assign_this">Set this device as current device</string>
    <string name="primary_device_btn_unassign_this">Unset this device as current device</string>
    <string name="primary_device_checkbox_relax">Allow using limited Apps at devices which are not the current device</string>
    <string name="purchase_required_info_only_networking">This feature is only available in the premium version.</string>
    <string name="update">Update</string>
    <string name="update_unsupported_text">This build does not have an integrated
        updater. Check the place where you downloaded TimeLimit to get updates.
    </string>
    <string name="update_unavailable">There is currently no update available</string>
    <string name="update_available">TimeLimit %s is available. Changes:\n%s</string>
    <string name="update_available_download">Update</string>
    <string name="update_disabled">The update checks are disabled</string>
    <string name="update_enable">Enable</string>
    <string name="update_check">Check for updates</string>
</resources>