<?xml version="1.0" encoding="utf-8"?>
<!--
  TimeLimit Copyright <C> 2019 Jonas Lochmann
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation version 3 of the License.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program. If not, see <https://www.gnu.org/licenses/>.
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="hasTriedManipulatingDeviceAdmin"
            type="Boolean" />

        <variable
            name="hasManipulatedDeviceAdmin"
            type="Boolean" />

        <variable
            name="hasManipulatedUsageStatsAccess"
            type="Boolean" />

        <variable
            name="hasManipulatedNotificationAccess"
            type="Boolean" />

        <variable
            name="hasManipulatedAppVersion"
            type="Boolean" />

        <variable
            name="hasManipulationReboot"
            type="Boolean" />

        <variable
            name="hasHadManipulation"
            type="Boolean" />

        <variable
            name="hasAnyManipulation"
            type="Boolean" />

        <import type="android.view.View" />
    </data>

    <androidx.cardview.widget.CardView
        android:visibility="@{safeUnbox(hasAnyManipulation) ? View.VISIBLE : View.GONE}"
        android:theme="@style/AppThemeDarkOverlay"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@color/orange"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_warning_white_24dp"
                android:text="@string/manage_device_manipulation_title"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/manage_device_manipulation_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:visibility="@{safeUnbox(hasTriedManipulatingDeviceAdmin) ? View.VISIBLE : View.GONE}"
                android:id="@+id/device_admin_disable_attempt_checkbox"
                android:text="@string/manage_device_manipulation_device_admin_disable_attempt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:visibility="@{safeUnbox(hasManipulatedDeviceAdmin) ? View.VISIBLE : View.GONE}"
                android:id="@+id/device_admin_disabled_checkbox"
                android:text="@string/manage_device_manipulation_device_admin_disabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:visibility="@{safeUnbox(hasManipulatedUsageStatsAccess) ? View.VISIBLE : View.GONE}"
                android:id="@+id/usage_access_checkbox"
                android:text="@string/manage_device_manipulation_usage_stats_access"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:visibility="@{safeUnbox(hasManipulatedNotificationAccess) ? View.VISIBLE : View.GONE}"
                android:id="@+id/notification_access_checkbox"
                android:text="@string/manage_device_manipulation_notification_access"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:visibility="@{safeUnbox(hasManipulatedAppVersion) ? View.VISIBLE : View.GONE}"
                android:id="@+id/app_version_checkbox"
                android:text="@string/manage_device_manipulation_app_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:visibility="@{safeUnbox(hasManipulationReboot) ? View.VISIBLE : View.GONE}"
                android:id="@+id/reboot_checkbox"
                android:text="@string/manage_device_manipulation_reboot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:visibility="@{safeUnbox(hasHadManipulation) ? View.VISIBLE : View.GONE}"
                android:id="@+id/had_manipulation_checkbox"
                android:text="@string/manage_device_manipulation_existed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:background="?selectableItemBackground"
                android:id="@+id/ignore_warnings_btn"
                android:layout_gravity="end"
                android:text="@string/manage_device_manipulation_btn_ignore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>
