<?xml version="1.0" encoding="utf-8"?>
<!--
  TimeLimit Copyright <C> 2019 - 2020 Jonas Lochmann
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation version 3 of the License.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program. If not, see <https://www.gnu.org/licenses/>.
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="status"
            type="io.timelimit.android.ui.update.UpdateView.Status" />

        <variable
            name="handlers"
            type="io.timelimit.android.ui.update.UpdateView.Handlers" />

        <variable
            name="newVersion"
            type="String" />

        <variable
            name="changelog"
            type="String" />

        <import type="io.timelimit.android.ui.update.UpdateView.Status" />
        <import type="android.view.View" />
    </data>

    <androidx.cardview.widget.CardView
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:text="@string/update"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:visibility="@{status == Status.Unsupported ? View.VISIBLE : View.GONE}"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/update_unsupported_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:visibility="@{status == Status.Disabled ? View.VISIBLE : View.GONE}"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/update_disabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:visibility="@{status == Status.Disabled ? View.VISIBLE : View.GONE}"
                android:onClick="@{() -> handlers.enable()}"
                android:layout_gravity="end"
                style="?materialButtonOutlinedStyle"
                android:text="@string/update_enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:visibility="@{status == Status.NothingAvailable ? View.VISIBLE : View.GONE}"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/update_unavailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:visibility="@{status == Status.NothingAvailable ? View.VISIBLE : View.GONE}"
                android:onClick="@{() -> handlers.check()}"
                android:layout_gravity="end"
                style="?materialButtonOutlinedStyle"
                android:text="@string/update_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:visibility="@{status == Status.UpdateAvailable ? View.VISIBLE : View.GONE}"
                android:textAppearance="?android:textAppearanceMedium"
                tools:text="@string/update_available"
                android:text="@{@string/update_available(newVersion, changelog)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:visibility="@{status == Status.UpdateAvailable ? View.VISIBLE : View.GONE}"
                android:onClick="@{() -> handlers.download()}"
                android:layout_gravity="end"
                style="?materialButtonOutlinedStyle"
                android:text="@string/update_available_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>